cleartype rendering mode not working
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
People
(Reporter: yang.pohsiang, Assigned: lsalzman)
References
Details
Attachments
(3 files)
1.72 MB,
image/png
|
Details | |
36.70 KB,
text/plain
|
Details | |
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
set "gfx.font_rendering.cleartype_params.rendering_mode" to mode 5
compare (Chinese characters) font rendering between Firefox 67 and 68
Windows 10 1903, Current language for non-Unicode programs: 中文 (繁體,台灣) <=Chinese (Traditional, Taiwan)
Actual results:
"gfx.font_rendering.cleartype_params.rendering_mode=5" in Firefox 68 seems not working anymore.
graphics compositing is using Webrender on Firefox 68, I ever tried turn Webrender on in Firefox 67, then "gfx.font_rendering.cleartype_params.rendering_mode" is also not working.
Expected results:
"gfx.font_rendering.cleartype_params.rendering_mode=5" in Firefox 67 working as intended, loving this font rendering on Chinese characters.
graphics compositing is using Direct3D 11 (Advanced Layer) on Firefox 67
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Reporter | ||
Comment 1•4 years ago
|
||
more graphics info
Reporter | ||
Comment 2•4 years ago
|
||
(In reply to Po-hsiang Yang from comment #1) > more graphics info > > https://imgur.com/5UClXFq
Assignee | ||
Comment 3•4 years ago
|
||
Assignee | ||
Updated•4 years ago
|
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/914ff68da4e4 allow forcing DWrite symmetric rendering mode. r=jrmuizel
Comment 5•4 years ago
|
||
bugherder |
Comment 6•4 years ago
|
||
Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.
Updated•4 years ago
|
Assignee | ||
Comment 7•4 years ago
|
||
This should be fixed in the latest nightly. Can you please check?
Comment 8•4 years ago
|
||
== Change summary for alert #21988 (as of Fri, 19 Jul 2019 16:51:03 GMT) ==
Improvements:
5% raptor-tp6-docs-firefox loadtime windows10-64-shippable opt 716.38 -> 683.96
4% raptor-tp6-facebook-firefox-cold loadtime windows10-64-shippable-qr opt 852.71 -> 815.67
4% raptor-tp6-docs-firefox fcp windows10-64-shippable opt 693.31 -> 663.71
4% raptor-tp6-docs-firefox windows10-64-shippable opt 678.33 -> 649.40
4% raptor-ares6-firefox windows10-64-shippable opt 59.19 -> 56.92
4% raptor-ares6-firefox windows10-64-shippable-qr opt 59.36 -> 57.19
4% raptor-tp6-facebook-firefox-cold loadtime windows10-64-shippable opt 867.75 -> 836.17
3% raptor-speedometer-firefox windows10-64-shippable-qr opt 85.55 -> 87.91
3% raptor-tp6-binast-instagram-firefox loadtime windows10-64-shippable-qr opt 443.38 -> 431.17
3% raptor-tp6-linkedin-firefox fcp windows10-64-shippable-qr opt 470.65 -> 458.33
3% raptor-speedometer-firefox windows10-64-shippable opt 85.56 -> 87.77
3% raptor-tp6-sheets-firefox loadtime windows10-64-shippable opt 903.88 -> 880.88
3% raptor-tp6-linkedin-firefox windows10-64-shippable-qr opt 590.54 -> 575.67
2% raptor-tp6-google-mail-firefox loadtime windows10-64-shippable opt 450.46 -> 439.71
2% raptor-tp6-slides-firefox loadtime windows10-64-shippable opt 963.29 -> 941.17
2% raptor-tp6-sheets-firefox loadtime windows10-64-shippable-qr opt 905.58 -> 885.08
2% raptor-tp6-linkedin-firefox windows10-64-shippable opt 587.51 -> 575.01
For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=21988
Reporter | ||
Comment 9•4 years ago
|
||
(In reply to Lee Salzman [:lsalzman] from comment #7)
This should be fixed in the latest nightly. Can you please check?
I checked it on Firefox Nightly (Firefox 70). The font rendering is working properly now in Webrender. Good job Mozilla Team and Thanks.
The Comparison shows below: (font rendering off and on (mode 5))
https://imgur.com/a/iGqyJrY
Comment 10•4 years ago
|
||
Hi Lee, is this something we should consider uplifting to Beta for 69 or can it ride 70 to release?
Assignee | ||
Comment 11•4 years ago
|
||
Comment on attachment 9079166 [details]
Bug 1565158 - allow forcing DWrite symmetric rendering mode. r?jrmuizel
Beta/Release Uplift Approval Request
- User impact if declined: Cleartype rendering preferences not working for WebRender users.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky):
- String changes made/needed:
Comment 12•4 years ago
|
||
Comment on attachment 9079166 [details]
Bug 1565158 - allow forcing DWrite symmetric rendering mode. r?jrmuizel
Improved ClearType font rendering for Windows users with WebRender enabled. Approved for 69.0b9.
Comment 13•4 years ago
|
||
bugherderuplift |
Updated•4 years ago
|
Updated•4 years ago
|
Comment 14•4 years ago
|
||
== Change summary for alert #22193 (as of Tue, 30 Jul 2019 07:37:34 GMT) ==
Improvements:
2% tp5o_webext windows10-64-shippable opt e10s stylo 157.47 -> 154.00
For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=22193
Comment 15•4 years ago
|
||
Hello,
I can confirm this issue is fixed on Beta 69.0b9. I verified using Windows 10 x64 Nvidia GeForce 1050 GTX. As the fix in nightly was verified by the reporter I'm marking this bug as verified fix.
Description
•