Bug 1565158 - Allow forcing DWrite symmetric rendering mode. r=jrmuizel, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D38569