gfx/2d/ScaledFontDWrite.cpp
@@ -126,14 +126,14 @@ static inline DWRITE_FONT_STRETCH DWriteFontStretchFromStretch(
 ScaledFontDWrite::ScaledFontDWrite(IDWriteFontFace* aFontFace,
                                    const RefPtr<UnscaledFont>& aUnscaledFont,
                                    Float aSize, bool aUseEmbeddedBitmap,
-                                   bool aForceGDIMode,
+                                   DWRITE_RENDERING_MODE aRenderingMode,
                                    IDWriteRenderingParams* aParams,
                                    Float aGamma, Float aContrast,
                                    const gfxFontStyle* aStyle)
     : ScaledFontBase(aUnscaledFont, aSize),
       mFontFace(aFontFace),
       mUseEmbeddedBitmap(aUseEmbeddedBitmap),
-      mForceGDIMode(aForceGDIMode),
+      mRenderingMode(aRenderingMode),
       mParams(aParams),
       mGamma(aGamma),
       mContrast(aContrast) {
@@ -185,7 +185,7 @@ SkTypeface* ScaledFontDWrite::CreateSkTypeface() {
   }
 
   return SkCreateTypefaceFromDWriteFont(factory, mFontFace, mStyle,
-                                        mForceGDIMode, gamma, contrast);
+                                        mRenderingMode, gamma, contrast);
 }
 #endif
 
@@ -417,7 +417,7 @@ ScaledFontDWrite::InstanceData::InstanceData(
     const wr::FontInstanceOptions* aOptions,
     const wr::FontInstancePlatformOptions* aPlatformOptions)
     : mUseEmbeddedBitmap(false),
-      mForceGDIMode(false),
+      mRenderingMode(DWRITE_RENDERING_MODE_DEFAULT),
       mGamma(2.2f),
       mContrast(1.0f) {
   if (aOptions) {
@@ -425,7 +425,11 @@ ScaledFontDWrite::InstanceData::InstanceData(
       mUseEmbeddedBitmap = true;
     }
     if (aOptions->flags & wr::FontInstanceFlags_FORCE_GDI) {
-      mForceGDIMode = true;
+      mRenderingMode = DWRITE_RENDERING_MODE_GDI_CLASSIC;
+    } else if (aOptions->flags & wr::FontInstanceFlags_FORCE_SYMMETRIC) {
+      mRenderingMode = DWRITE_RENDERING_MODE_CLEARTYPE_NATURAL_SYMMETRIC;
+    } else if (aOptions->flags & wr::FontInstanceFlags_NO_SYMMETRIC) {
+      mRenderingMode = DWRITE_RENDERING_MODE_CLEARTYPE_NATURAL;
     }
   }
   if (aPlatformOptions) {
@@ -505,6 +509,16 @@ bool ScaledFontDWrite::GetWRFontInstanceOptions(
     options.flags |= wr::FontInstanceFlags_FORCE_GDI;
   } else {
     options.flags |= wr::FontInstanceFlags_SUBPIXEL_POSITION;
+  }
+  switch (GetRenderingMode()) {
+    case DWRITE_RENDERING_MODE_CLEARTYPE_NATURAL_SYMMETRIC:
+      options.flags |= wr::FontInstanceFlags_FORCE_SYMMETRIC;
+      break;
+    case DWRITE_RENDERING_MODE_CLEARTYPE_NATURAL:
+      options.flags |= wr::FontInstanceFlags_NO_SYMMETRIC;
+      break;
+    default:
+      break;
   }
   if (Factory::GetBGRSubpixelOrder()) {
     options.flags |= wr::FontInstanceFlags_SUBPIXEL_BGR;
@@ -595,7 +609,7 @@ already_AddRefed<ScaledFont> UnscaledFontDWrite::CreateScaledFont(
 
   RefPtr<ScaledFontBase> scaledFont = new ScaledFontDWrite(
       face, this, aGlyphSize, instanceData.mUseEmbeddedBitmap,
-      instanceData.mForceGDIMode, nullptr, instanceData.mGamma,
+      instanceData.mRenderingMode, nullptr, instanceData.mGamma,
       instanceData.mContrast);
 
   if (mNeedsCairo && !scaledFont->PopulateCairoScaledFont()) {
